# learn-agentic-ai

./: .gitignore  README.md  langgraph.json  main.py  pyproject.toml  universe_roadmap.md
doc/: TODO and NOT TODO.md  about RAG.md  about domain specific programming language.md  about finetuning.md  about vertical domain application.md  agent learning map.md  data collection preprocessing and evaluation.md  datasets.md  tasks.md
src/: 0_ollama.py  0_quick_start.py  1_build_custom_workflow.py  2_1_deployment_local.py  2_2_agentic_rag.py  2_3_agent_supervisor.py  2_4_sql_agent.py  2_5_chat_ui.py  2_5_langgraph_studio.py  3_1_multimodality_image2text.py  3_2_GraphRAG_QA_system.py  4_1_generate_synthetic_dataset_with_ragas.py  4_3_LLM_as_a_judge_for_LLM_evaluation.py  4_4_embedding_distance_based_QA_system_quality_evaluator.py  4_5_langSmith_custom_LLM_evaluation.py  4_6_generate_synthetic_dataset_using_RAG.py  4_7_ragas_LLM_app_evaluation_with_custom_metrics.py  5_1_CoT.py  5_2_code_debug_system.py  6_a2a_langgraph_tutorial.py  7_LLM_finetuning.py
