[project]
name = "learn-agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.4.0",
    "langchain-ollama>=0.3.6",
    "langgraph>=0.6.4",
    "numpy>=2.3.2",
    "ollama>=0.5.3",
    "pillow>=11.3.0",
]
